--- a/6_pigGame/style.css
+++ b/6_pigGame/style.css
@@ -15,7 +15,7 @@ body {
     font-weight: 400;
     height: 100vh;
     color: #333;
-    background-image: linear-gradient(to top left, #753682 0%, #bf2e34 100%);
+    background-image: linear-gradient(to top left, #b775c4 0%, #bb060c 100%);
     display: flex;
     align-items: center;
     justify-content: center;
